Bug fixes: Skill bars misaligned Projects not flowing on mobile Landing page screwed on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 .avatar-img {
@@ -66,8 +66,6 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: 50%;
-  margin: auto;
 }
 
 .social-links i {
@@ -78,6 +76,15 @@
 
 .projects-grid {
   display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.project-card {
+  flex-shrink: 0;
+  max-width: 330px;
+  width: 100%;
+  margin: 16px 8px;
 }
 
 .contact-body {
@@ -115,8 +122,14 @@
 }
 
 .contact-list i {
-  font-size: 66px;
-  padding-right: 5rem;
+  font-size: 30px;
+  padding-right: 2rem;
+  width: 30px;
+}
+
+.contact-item {
+  font-size: 20px;
+  font-family: Anton;
 }
 
 /* Resume Page Css */
@@ -124,4 +137,19 @@
   background: #27221f;
   color: white;
   padding: 2em;
+}
+
+@media (max-width: 720px) {
+  .banner-text h1 {
+    font-size: 32px;
+  }
+
+  .contact-list i {
+    font-size: 25px;
+    padding-right: 1rem;
+  }
+
+  .contact-item {
+    font-size: 13px;
+  }
 }
